feat: add miniapp subscription notifications
